[project]
name = "sqlrooms-duckdb-server"
description = "A DuckDB server for SQLRooms"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "diskcache",
  "duckdb>=1.3.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.24.0",
  "pandas",
  "pyarrow",
  "ujson",
]

[project.optional-dependencies]
test = ["aiohttp>=3.9"]

[project.scripts]
sqlrooms-duckdb-server = "pkg.__main__:serve"

[project.urls]
homepage = "https://github.com/sqlrooms/sqlrooms-duckdb-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "watchdog",
  "mypy",
  "pytest",
  "ruff",
  "types-ujson",
]

[tool.hatch.build.targets.wheel]
packages = ["pkg"]

[tool.hatch.version]
path = "package.json"
pattern = "\"version\": \"(?P<version>.+?)\""

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "pkg/**/*.py"
strict = false
ignore_missing_imports = true
